; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_pageout.c_vm_set_restrictions.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_pageout.c_vm_set_restrictions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@HOST_BASIC_INFO_COUNT = common dso_local global i32 0, align 4
@HOST_BASIC_INFO = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@vm_pageout_state = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@FALSE = common dso_local global i32 0, align 4
@BSD_HOST = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_set_restrictions() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @HOST_BASIC_INFO_COUNT, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @HOST_BASIC_INFO, align 4
  %5 = ptrtoint %struct.TYPE_3__* %1 to i32
  %6 = call i32 @host_info(i32 1, i32 %4, i32 %5, i32* %2)
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp sgt i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sle i32 %13, 3
  br i1 %14, label %15, label %17

15:                                               ; preds = %0
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vm_pageout_state, i32 0, i32 0), align 4
  br label %19

17:                                               ; preds = %0
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vm_pageout_state, i32 0, i32 0), align 4
  br label %19

19:                                               ; preds = %17, %15
  ret void
}

declare dso_local i32 @host_info(i32, i32, i32, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
